tests/failing/invalid_infix.dodo
// Expected: Did not expect token 'If' while parsing infix expression

fn main() {
    let x: u32 = 12 if 13;
}
